# open-aal

./: CMakeLists.txt  Readme.md
src/: amta.cpp  bars.cpp
src/include/: baudc.h
src/include/aal/: amta.h  bars.h
src/include/aal/util/: hash.h
src/include/util/: hash.h
tests/: CMakeLists.txt
tests/src/: main.cpp
